[gd_scene load_steps=14 format=2]

[ext_resource path="res://scene/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Script/Arena.gd" type="Script" id=2]
[ext_resource path="res://Assets/kenvector_future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Script/score.gd" type="Script" id=4]
[ext_resource path="res://Script/Camera2D.gd" type="Script" id=5]
[ext_resource path="res://Script/Highscore.gd" type="Script" id=6]
[ext_resource path="res://scene/Enemy_1.tscn" type="PackedScene" id=7]
[ext_resource path="res://scene/Enemy.tscn" type="PackedScene" id=8]
[ext_resource path="res://scene/Power_up.tscn" type="PackedScene" id=9]
[ext_resource path="res://scene/Power_up_damager.tscn" type="PackedScene" id=10]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_bloom = 0.15
glow_blend_mode = 0
glow_high_quality = true

[sub_resource type="DynamicFont" id=2]
size = 50
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 3 )

[node name="Arena" type="Node2D"]
script = ExtResource( 2 )
enemies = [ ExtResource( 8 ), ExtResource( 7 ) ]
Power_up = [ ExtResource( 9 ), ExtResource( 10 ) ]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 320, 150 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Enemy_spawn" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Difficulty" type="Timer" parent="."]
autostart = true

[node name="Power_up_spawn_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="UI" type="Node2D" parent="."]
z_index = 20

[node name="Control" type="Control" parent="UI"]
margin_right = 20.0
margin_bottom = 12.0

[node name="score" type="Label" parent="UI/Control"]
margin_top = -18.0
margin_right = 1280.0
margin_bottom = 127.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 2 )
text = "1111"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="Highscore" type="Label" parent="UI/Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = 215.0
margin_right = 1280.0
margin_bottom = 360.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 3 )
text = "1111"
align = 1
valign = 1
script = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 320, 150 )
current = true
script = ExtResource( 5 )

[node name="Screen_shake" type="Timer" parent="Camera2D"]
one_shot = true

[connection signal="timeout" from="Enemy_spawn" to="." method="_on_Enemy_spawn_timeout"]
[connection signal="timeout" from="Difficulty" to="." method="_on_Difficulty_timeout"]
[connection signal="timeout" from="Power_up_spawn_timer" to="." method="_on_Power_up_spawn_timer_timeout"]
[connection signal="timeout" from="Camera2D/Screen_shake" to="Camera2D" method="_on_Screen_shake_timeout"]
